--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,7 +7,7 @@
 
 # These owners will be the default owners for everything in the repo. Unless a later match takes precedence,
 # @giantswarm/team-x and @giantswarm/team-y will be requested for review when someone opens a pull request.
-# *    @giantswarm/team-x @giantswarm/team-y
+ *    @giantswarm/team-ludacris
 
 # Order is important; the last matching pattern takes the most precedence. When someone opens a pull request that only
 # modifies golang files, only @giantswarm/sig-xyz and not the global owner(s) will be requested for a review.
