--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,31 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+
+      # Ensure that for every commit to master and for every
+      # release tag, there is an app version in the catalog.
+      - architect/push-to-app-catalog:
+          name: push-to-app-catalog-master
+          app_catalog: "conformance-catalog"
+          app_catalog_test: "conformance-test-catalog"
+          chart: "prow-log-aggregator"
+          requires:
+            - push-to-quay
+          filters:
+            branches:
+              only: master
+            tags:
+              only: /^v.*/
+
+      # Ensure that for every commit (branch other than master)
+      # there is an app version in the test catalog.
+      - architect/push-to-app-catalog:
+          name: push-to-app-catalog-pr
+          app_catalog: "conformance-catalog"
+          app_catalog_test: "conformance-test-catalog"
+          chart: "prow-log-aggregator"
+          requires:
+            - push-to-quay
+          filters:
+            branches:
+              ignore: master
