--- a/helm/prow-log-aggregator/values.yaml
+++ b/helm/prow-log-aggregator/values.yaml
@@ -1,3 +1,10 @@
 image:
   name: "giantswarm/prow-log-aggregator"
   tag: "[[ .Version ]]"
+Installation:
+  V1:
+    Registry:
+      Domain: quay.io
+project:
+  branch: "[[ .Branch ]]"
+  commit: "[[ .SHA ]]"
