--- a/helm/prow-log-aggregator/templates/deployment.yaml
+++ b/helm/prow-log-aggregator/templates/deployment.yaml
@@ -22,4 +22,5 @@ spec:
         - name: log-aggregator
           image: "{{ .Values.Installation.V1.Registry.Domain }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
           args:
+            - daemon
             - --namespace=nightly
