--- a/helm/prow-log-aggregator/templates/deployment.yaml
+++ b/helm/prow-log-aggregator/templates/deployment.yaml
@@ -24,3 +24,4 @@ spec:
           args:
             - daemon
             - --kubeconfig.namespace=nightly
+            - --server.listen.address=http://0.0.0.0:8000
