Push to conformance catalog (#3)
* Push to conformance catalog

* Add env vars from context

* Fix helm nil errors

* Push to controlplance catalog

* Fix args

* Actually run daemon

* Fix flag structure

* Align ports

* Expose port

* Simplify ports

* Add server listen flag

* Log args

* Fix defaulting for flags

* Get stderr and stdout

* Do not parse to json

* Return values correctly

* Remove string and byte mismatch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,38 @@ workflows:
 
       - architect/push-to-docker:
           name: push-to-quay
-          image: "quay.io/giantswarm/prow-log-aggregator"
           context: architect
+          image: "quay.io/giantswarm/prow-log-aggregator"
           username_envar: "QUAY_USERNAME"
           password_envar: "QUAY_PASSWORD"
           requires:
             - go-build
           filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-catalog:
+          name: push-to-app-catalog-master
+          context: architect
+          app_catalog: "control-plane-catalog"
+          app_catalog_test: "control-plane-test-catalog"
+          chart: "prow-log-aggregator"
+          requires:
+            - push-to-quay
+          filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          name: push-to-conformance-app-collection
+          context: architect
+          app_name: "prow-log-aggregator"
+          app_collection_repo: "conformance-app-collection"
+          unique: "true"
+          requires:
+            - push-to-app-catalog-master
+          filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v.*/
