--- a/helm/prow-log-aggregator/templates/deployment.yaml
+++ b/helm/prow-log-aggregator/templates/deployment.yaml
@@ -22,5 +22,6 @@ spec:
         - name: log-aggregator
           image: "{{ .Values.Installation.V1.Registry.Domain }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
           args:
-            - -namespace
-            - nightly
+            - daemon
+            - --kubeconfig.namespace=nightly
+            - --server.listen.address=http://0.0.0.0:8000
