--- a/helm/prow-log-aggregator/templates/clusterrole.yaml
+++ b/helm/prow-log-aggregator/templates/clusterrole.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  namespace: prow
+  namespace: test-infra
   name: log-aggregator
 rules:
   - apiGroups:
