--- a/helm/prow-log-aggregator/templates/clusterrolebinding.yaml
+++ b/helm/prow-log-aggregator/templates/clusterrolebinding.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  namespace: prow
+  namespace: test-infra
   name: log-aggregator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -10,4 +10,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: log-aggregator
-    namespace: prow
+    namespace: test-infra
