--- a/helm/prow-log-aggregator/templates/service.yaml
+++ b/helm/prow-log-aggregator/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: log-aggregator
-  namespace: prow
+  namespace: test-infra
 spec:
   ports:
   - port: 8000
