--- a/helm/prow-log-aggregator/templates/deployment.yaml
+++ b/helm/prow-log-aggregator/templates/deployment.yaml
@@ -23,5 +23,5 @@ spec:
           image: "{{ .Values.Installation.V1.Registry.Domain }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
           args:
             - daemon
-            - --kubeconfig.namespace=nightly
+            - --kubeconfig.namespace={{ .Values.kubeconfig.namespace }}
             - --server.listen.address=http://0.0.0.0:8000
