--- a/helm/prow-log-aggregator/templates/deployment.yaml
+++ b/helm/prow-log-aggregator/templates/deployment.yaml
@@ -25,3 +25,5 @@ spec:
             - daemon
             - --kubeconfig.namespace={{ .Values.kubeconfig.namespace }}
             - --server.listen.address=http://0.0.0.0:8000
+      securityContext:
+        runAsUser: 1000
