--- a/helm/prow-log-aggregator/templates/clusterrole.yaml
+++ b/helm/prow-log-aggregator/templates/clusterrole.yaml
@@ -4,17 +4,25 @@ metadata:
   namespace: test-infra
   name: log-aggregator
 rules:
-  - apiGroups:
-      - tekton.dev
-      - prow.k8s.io
-    resources:
-      - "*"
-    verbs:
-      - "*"
-  - apiGroups:
-      - ""
-    resources:
-      - "pods"
-      - "pods/log"
-    verbs:
-      - "get"
+- apiGroups:
+  - tekton.dev
+  - prow.k8s.io
+  resources:
+  - "*"
+  verbs:
+  - "*"
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  - pods/log
+  verbs:
+  - get
+- apiGroups:
+  - policy
+  resourceNames:
+  - privileged
+  resources:
+  - podsecuritypolicies
+  verbs:
+  - use
