--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -16,5 +16,9 @@ CVE-2021-3127 until=2022-12-31
 # pkg:golang/github.com/pkg/sftp@v1.10.1
 sonatype-2019-0890 until=2022-12-31
 
+# pkg:golang/github.com/nats-io/nats-server/v2@v2.5.0
+CVE-2022-42709 until=2022-12-31
+CVE-2022-42708 until=2022-12-31
+
 # pkg:golang/github.com/prometheus/client_golang@v1.11.0
 CVE-2022-21698 until=2022-12-31
