--- a/helm/prow-log-aggregator/templates/deployment.yaml
+++ b/helm/prow-log-aggregator/templates/deployment.yaml
@@ -27,3 +27,6 @@ spec:
             - --server.listen.address=http://0.0.0.0:8000
       securityContext:
         runAsUser: 1000
+        allowPrivileveEscalation: false
+        seccompProfile:
+          type: RuntimeDefault
