--- a/helm/prow-log-aggregator/templates/deployment.yaml
+++ b/helm/prow-log-aggregator/templates/deployment.yaml
@@ -25,8 +25,9 @@ spec:
             - daemon
             - --kubeconfig.namespace={{ .Values.kubeconfig.namespace }}
             - --server.listen.address=http://0.0.0.0:8000
+          securityContext:
+            allowPrivilegeEscalation: false
       securityContext:
         runAsUser: 1000
-        allowPrivilegeEscalation: false
         seccompProfile:
           type: RuntimeDefault
