Disable PSP if PSS is in enforced mode.

--- a/helm/prow-log-aggregator/values.yaml
+++ b/helm/prow-log-aggregator/values.yaml
@@ -11,5 +11,6 @@ project:
   branch: "[[ .Branch ]]"
   commit: "[[ .SHA ]]"
 
-podSecurityStandards:
-  enforced: false
+global:
+  podSecurityStandards:
+    enforced: false
