Add team annotation

--- a/helm/prow-log-aggregator/Chart.yaml
+++ b/helm/prow-log-aggregator/Chart.yaml
@@ -4,3 +4,5 @@ home: https://github.com/giantswarm/prow-log-aggregator
 description: Extract logs from Tekton pipelines into Prow dashboards.
 version: "[[ .Version ]]"
 appVersion: "[[ .AppVersion ]]"
+annotations:
+  application.giantswarm.io/team: honeybadger
