--- a/helm/prow-log-aggregator/templates/service.yaml
+++ b/helm/prow-log-aggregator/templates/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: log-aggregator
   namespace: test-infra
+  labels:
+    {{- include "labels.common" . | nindent 4 }}
 spec:
   ports:
   - port: 8000
