--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ workflows:
       - architect/push-to-app-catalog:
           name: push-to-app-catalog
           context: architect
-          app_catalog: control-plane-catalog
-          app_catalog_test: control-plane-test-catalog
+          app_catalog: "giantswarm-operations-platform-catalog"
+          app_catalog_test: "giantswarm-operations-platform-test-catalog"
           chart: prow-log-aggregator
           requires:
             - push-to-registries
