--- a/helm/prow-log-aggregator/values.yaml
+++ b/helm/prow-log-aggregator/values.yaml
@@ -11,6 +11,19 @@ project:
   branch: "[[ .Branch ]]"
   commit: "[[ .SHA ]]"
 
+securityContext: {}
+
+podSecurityContext:
+  runAsNonRoot: true
+  runAsUser: 1000
+  allowPrivilegeEscalation: false
+  seccompProfile:
+    type: RuntimeDefault
+  capabilities:
+    drop:
+    - ALL
+  readOnlyRootFilesystem: true
+
 global:
   podSecurityStandards:
     enforced: false
