--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -1,9 +1,2 @@
-# pkg:golang/github.com/hashicorp/consul/api@v1.15.3
-CVE-2022-29153 until=2023-12-31
-
-# pkg:golang/github.com/hashicorp/consul/sdk@v0.11.0
-CVE-2022-29153 until=2023-12-31
-CVE-2021-41803 until=2023-12-31
-
-# pkg:golang/github.com/nats-io/nkeys@v0.4.5
-CVE-2023-46129 until=2023-12-01
+# pkg:golang/google.golang.org/protobuf@v1.31.0
+CVE-2024-24786 until=2024-03-31
