Ignore default branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,31 +6,39 @@ orbs:
 workflows:
   build:
     jobs:
-      - architect/go-build:
-          name: go-build
-          binary: prow-log-aggregator
-          resource_class: large
-          filters:
-            tags:
-              only: /^v.*/
+    - architect/go-build:
+        name: go-build
+        binary: prow-log-aggregator
+        resource_class: large
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-registries:
-          context: architect
-          name: push-to-registries
-          requires:
-            - go-build
-          filters:
-            tags:
-              only: /^v.*/
+    - architect/push-to-registries:
+        context: architect
+        name: push-to-registries
+        requires:
+        - go-build
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-catalog:
-          name: push-to-app-catalog
-          context: architect
-          app_catalog: "giantswarm-operations-platform-catalog"
-          app_catalog_test: "giantswarm-operations-platform-test-catalog"
-          chart: prow-log-aggregator
-          requires:
-            - push-to-registries
-          filters:
-            tags:
-              only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
+    - architect/push-to-app-catalog:
+        name: push-to-app-catalog
+        context: architect
+        app_catalog: giantswarm-operations-platform-catalog
+        app_catalog_test: giantswarm-operations-platform-test-catalog
+        chart: prow-log-aggregator
+        requires:
+        - push-to-registries
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
